set up database in Docker, got connection to Grafana working, added db password and postgraphileController.js

--- a/compose.yaml
+++ b/compose.yaml
@@ -34,7 +34,7 @@ services:
     volumes:
       - db-data:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=example
+      - POSTGRES_DB=fylakas-database
       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
     expose:
       - 5432
