--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "graphql": "^16.8.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3",
+    "postgraphile": "^4.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.15.0",
