--- a/compose.yaml
+++ b/compose.yaml
@@ -13,15 +13,15 @@ services:
       context: .
     environment:
       NODE_ENV: production
-    ports:
-      - 3000:3000
-
-# The commented out section below is an example of how to define a PostgreSQL
-# database that your application can use. `depends_on` tells Docker Compose to
-# start the database before your application. The `db-data` volume persists the
-# database data between container restarts. The `db-password` secret is used
-# to set the database password. You must create `db/password.txt` and add
-# a password of your choosing to it before running `docker-compose up`.
+    ports: 
+      - 8080:3000
+# I think the above should be 8080:3000 - allows you to access node.js app on 8080 and then listen on 3000 
+    # The commented out section below is an example of how to define a PostgreSQL
+    # database that your application can use. `depends_on` tells Docker Compose to
+    # start the database before your application. The `db-data` volume persists the
+    # database data between container restarts. The `db-password` secret is used
+    # to set the database password. You must create `db/password.txt` and add
+    # a password of your choosing to it before running `docker-compose up`.
     depends_on:
       db:
         condition: service_healthy
@@ -38,8 +38,9 @@ services:
       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
     expose:
       - 5432
+      # 5432 is the default PostgreSQL port 
     healthcheck:
-      test: [ "CMD", "pg_isready" ]
+      test: ['CMD', 'pg_isready']
       interval: 10s
       timeout: 5s
       retries: 5
@@ -48,4 +49,3 @@ volumes:
 secrets:
   db-password:
     file: db/password.txt
-
