--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.18.2",
     "graphql": "^16.8.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.1",
     "pg": "^8.11.3",
     "postgraphile": "^4.13.0",
     "react": "^18.2.0",
