ChartJS implemented to display mock data for 4 metrics

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.1",
     "bootstrap-icons": "^1.10.5",
+    "chart.js": "^4.4.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
@@ -44,6 +45,7 @@
     "pg": "^8.11.3",
     "postgraphile": "^4.13.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.15.0",
