--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "testMatch": ["**/__tests__/**/?(*.)+(spec|test).[tj]s?(x)"]
+    "testMatch": [
+      "**/__tests__/**/?(*.)+(spec|test).[tj]s?(x)"
+    ]
   },
   "author": "",
   "license": "ISC",
@@ -27,7 +29,6 @@
     "eslint": "^8.48.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
-    "nodemon": "^3.0.1",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "supertest": "^6.3.3",
