--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "NODE_ENV=production webpack",
-    "start": "NODE_ENV=production nodemon server/server.js",
+    "start": "NODE_ENV=production node server/server.js",
     "dev": "concurrently \"nodemon server/server.js\" \"NODE_ENV=development webpack serve --open\" ",
     "test": "jest"
   },
@@ -29,6 +29,7 @@
     "eslint": "^8.48.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
     "sass-loader": "^13.3.2",
     "style-loader": "^3.3.3",
     "supertest": "^6.3.3",
